# copilot_cowork_mcp

./: .gitignore  .mcp.json  LICENSE  README.md  TECHNICAL.md  client.py  pyproject.toml  requirements.txt  server.json  server.py
.github/plugin/: plugin.json
.github/workflows/: publish.yml
copilot_cowork_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py
